Crash when Rendering (F12) #65044

Closed
opened 2019-05-23 22:36:00 +02:00 by Sylvain DERAY · 14 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24

Blender Version
Broken: version: 2.80 (sub 71), branch: master, commit date: 2019-05-23 14:37, hash: fd3f75a02c
Worked: (optional)

Short description of error
Crash when Rendering (F12)

Exact steps for others to reproduce the error
Open blender, open my file then crash when Rendering (F12)
immeuble en fete v3.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24 **Blender Version** Broken: version: 2.80 (sub 71), branch: master, commit date: 2019-05-23 14:37, hash: `fd3f75a02c` Worked: (optional) **Short description of error** Crash when Rendering (F12) **Exact steps for others to reproduce the error** Open blender, open my file then crash when Rendering (F12) [immeuble en fete v3.blend](https://archive.blender.org/developer/F7063789/immeuble_en_fete_v3.blend)
Author

Added subscriber: @sylvain.deray

Added subscriber: @sylvain.deray

#65079 was marked as duplicate of this issue

#65079 was marked as duplicate of this issue

#65078 was marked as duplicate of this issue

#65078 was marked as duplicate of this issue

Added subscriber: @you.le

Added subscriber: @you.le

I'm not sure but it can be related to track to constraint on the main camera. When I remove this constraint, it doesn't crash for me

I'm not sure but it can be related to track to constraint on the main camera. When I remove this constraint, it doesn't crash for me

Added subscriber: @Gvgeo-1

Added subscriber: @Gvgeo-1
Sergey Sharybin was assigned by George Vogiatzis 2019-05-24 07:21:25 +02:00

From build_object function, &object->id is NULL

 	blender.exe!DEG::Depsgraph::get_cow_id(const ID * id_orig) Line 289	C++                <---CRASH
 	blender.exe!DEG::DepsgraphNodeBuilder::get_cow_id(const ID * id_orig) Line 297	C++
 	blender.exe!DEG::DepsgraphNodeBuilder::get_cow_datablock<Scene>(const Scene * orig) Line 94	C++
 	blender.exe!DEG::DepsgraphNodeBuilder::build_object_constraints(Object * object) Line 783	C++
 	blender.exe!DEG::DepsgraphNodeBuilder::build_object_transform(Object * object) Line 748	C++
>	blender.exe!DEG::DepsgraphNodeBuilder::build_object(int base_index, Object * object, DEG::eDepsNode_LinkedState_Type linked_state, bool is_visible) Line 561	C++

 	blender.exe!DEG::DepsgraphNodeBuilder::build_nodetree(bNodeTree * ntree) Line 1385	C++
 	blender.exe!DEG::DepsgraphNodeBuilder::build_scene_compositor(Scene * scene) Line 60	C++
 	blender.exe!DEG::DepsgraphNodeBuilder::build_scene_render(Scene * scene) Line 40	C++
 	blender.exe!DEG_graph_build_for_render_pipeline(Depsgraph * graph, Main * bmain, Scene * scene, ViewLayer * __formal) Line 303	C++
 	blender.exe!render_init_depsgraph(Render * re) Line 2092	C
 	blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, const bool write_still) Line 2121	C
 	blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 692	C
 	blender.exe!do_job_thread(void * job_v) Line 377	C
 	blender.exe!tslot_thread_start(void * tslot_p) Line 260	C
 	[External Code]	
 	blender.exe!invoke_thread_procedure(unsigned int(*)(void *) procedure, void * const context) Line 92	C++
 	blender.exe!thread_start<unsigned int (__cdecl*)(void * __ptr64)>(void * const parameter) Line 115	C++
 	[External Code]	
From `build_object` function, `&object->id` is NULL ``` blender.exe!DEG::Depsgraph::get_cow_id(const ID * id_orig) Line 289 C++ <---CRASH blender.exe!DEG::DepsgraphNodeBuilder::get_cow_id(const ID * id_orig) Line 297 C++ blender.exe!DEG::DepsgraphNodeBuilder::get_cow_datablock<Scene>(const Scene * orig) Line 94 C++ blender.exe!DEG::DepsgraphNodeBuilder::build_object_constraints(Object * object) Line 783 C++ blender.exe!DEG::DepsgraphNodeBuilder::build_object_transform(Object * object) Line 748 C++ > blender.exe!DEG::DepsgraphNodeBuilder::build_object(int base_index, Object * object, DEG::eDepsNode_LinkedState_Type linked_state, bool is_visible) Line 561 C++ blender.exe!DEG::DepsgraphNodeBuilder::build_nodetree(bNodeTree * ntree) Line 1385 C++ blender.exe!DEG::DepsgraphNodeBuilder::build_scene_compositor(Scene * scene) Line 60 C++ blender.exe!DEG::DepsgraphNodeBuilder::build_scene_render(Scene * scene) Line 40 C++ blender.exe!DEG_graph_build_for_render_pipeline(Depsgraph * graph, Main * bmain, Scene * scene, ViewLayer * __formal) Line 303 C++ blender.exe!render_init_depsgraph(Render * re) Line 2092 C blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, const bool write_still) Line 2121 C blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 692 C blender.exe!do_job_thread(void * job_v) Line 377 C blender.exe!tslot_thread_start(void * tslot_p) Line 260 C [External Code] blender.exe!invoke_thread_procedure(unsigned int(*)(void *) procedure, void * const context) Line 92 C++ blender.exe!thread_start<unsigned int (__cdecl*)(void * __ptr64)>(void * const parameter) Line 115 C++ [External Code] ```

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I have a similar problem where camera is parented to and empty which is parented to an object. See attached file, it crashes on render too: camera_parented_crash.blend
Worked yesterday in a1ad71304c

I have a similar problem where camera is parented to and empty which is parented to an object. See attached file, it crashes on render too: [camera_parented_crash.blend](https://archive.blender.org/developer/F7064721/camera_parented_crash.blend) Worked yesterday in a1ad71304c2d

@MarcinTwarowski Same error.
Crashes get_cow_id too. Again &object->id is NULL

@MarcinTwarowski Same error. Crashes `get_cow_id` too. Again `&object->id` is NULL

This issue was referenced by ba58b9d2af

This issue was referenced by ba58b9d2af5bb49ea9a3511fae18ba4d5780105b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @andreymd87

Added subscriber: @andreymd87

Added subscriber: @MizManFryinPan

Added subscriber: @MizManFryinPan
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65044
No description provided.