source/blender/depsgraph/intern/builder/deg_builder_relations_view_layer.cc
@@ -127,6 +127,11 @@ void DepsgraphRelationBuilder::build_view_layer(Scene *scene, ViewLayer *view_la
   /* Scene parameters, compositor and such. */
   build_scene_compositor(scene);
   build_scene_parameters(scene);
+  /* Make final scene evaluation dependent on view layer evaluation. */
+  OperationKey scene_view_layer_key(
+      &scene->id, NodeType::LAYER_COLLECTIONS, OperationCode::VIEW_LAYER_EVAL);
+  OperationKey scene_eval_key(&scene->id, NodeType::PARAMETERS, OperationCode::SCENE_EVAL);
+  add_relation(scene_view_layer_key, scene_eval_key, "View Layer -> Scene Eval");
   /* Build all set scenes. */
   if (scene->set != NULL) {
     ViewLayer *set_view_layer = BKE_view_layer_default_render(scene->set);
